--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,16 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Campgrounds</title>
+  <title><%= foundCamp.title %></title>
 </head>
 
 <body>
-  <h1>All Campgrounds</h1>
-  <ul>
-    <% for( let campground of campgrounds) { %>
-    <li><a href="/campground/<%= campground._id %>"><%= campground.title %></a></li>
-    <% } %>
-  </ul>
+  <h1><%= foundCamp.title %></h1>
+  <h2><%= foundCamp.location %></h2>
 
 </body>
 
