--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,7 +11,7 @@
 <body>
   <h1><%= foundCamp.title %></h1>
   <h2><%= foundCamp.location %></h2>
-
+  <a href="/campgrounds">All Campgrounds</a>
 </body>
 
 </html>
