Created edit form and route for campgrounds

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,6 +11,9 @@
 <body>
   <h1><%= foundCamp.title %></h1>
   <h2><%= foundCamp.location %></h2>
+  <div>
+    <a href="/campgrounds/<%= foundCamp._id %>/edit">Edit Campground</a>
+  </div>
   <a href="/campgrounds">All Campgrounds</a>
 </body>
 
