--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,6 +10,7 @@
 
 <body>
   <h1>All Campgrounds</h1>
+  <a href="/campgrounds/new">Create Campground</a>
   <ul>
     <% for( let campground of campgrounds) { %>
     <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li>
