--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,6 +14,11 @@
   <div>
     <a href="/campgrounds/<%= foundCamp._id %>/edit">Edit Campground</a>
   </div>
+  <div>
+    <form action="/campgrounds/<%= foundCamp._id %>?_method=DELETE" method="post">
+      <button>Delete</button>
+    </form>
+  </div>
   <a href="/campgrounds">All Campgrounds</a>
 </body>
 
