--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= foundCamp.title %></title>
-</head>
-
-<body>
-  <h1><%= foundCamp.title %></h1>
-  <h2><%= foundCamp.location %></h2>
-  <div>
-    <a href="/campgrounds/<%= foundCamp._id %>/edit">Edit Campground</a>
-  </div>
-  <div>
-    <form action="/campgrounds/<%= foundCamp._id %>?_method=DELETE" method="post">
-      <button>Delete</button>
-    </form>
-  </div>
-  <a href="/campgrounds">All Campgrounds</a>
-</body>
-
-</html>
+<% layout("/layouts/boilerplate") -%>
+<h1><%= foundCamp.title %></h1>
+<h2><%= foundCamp.location %></h2>
+<div>
+  <a href="/campgrounds/<%= foundCamp._id %>/edit">Edit Campground</a>
+</div>
+<div>
+  <form action="/campgrounds/<%= foundCamp._id %>?_method=DELETE" method="post">
+    <button>Delete</button>
+  </form>
+</div>
+<a href="/campgrounds">All Campgrounds</a>
