--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-  <main class="container">
+  <%- include("../partials/navbar") %>
+  <main class="container mt-3">
     <%- body -%>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
