--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,19 @@
 <% layout("/layouts/boilerplate") -%>
 <h1>All Campgrounds</h1>
-<ul>
-  <% for( let campground of campgrounds) { %>
-  <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li>
-  <% } %>
-</ul>
+<% for( let campground of campgrounds) { %>
+<div class="card mb-3">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid" src="<%= campground.image %>" alt="">
+    </div>
+    <div class="card-body col-md-8">
+      <h5 class="card-title"><%= campground.title %></h5>
+      <p class="card-text"><%= campground.description %></p>
+      <p class="card-text text-muted">
+        <small><%= campground.location %></small>
+      </p>
+      <a href="campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+    </div>
+  </div>
+</div>
+<% } %>
