Updated new campground form and added bootstrap style

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,11 +1,36 @@
 <% layout("/layouts/boilerplate") -%>
-<h1>Create New Campground</h1>
-<form action="/campgrounds" method="post">
-  <label for="">Title</label>
-  <input type="text" id="title" name="campground[title]">
-  <label for="">Location</label>
-  <input type="text" id="location" name="campground[location]">
-  <button>Submit</button>
-  <br>
-  <a href="/campgrounds">Cancel</a>
-</form>
+<div class="row">
+  <h1 class="text-center">New Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds" method="post">
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-control" type="text" id="title" name="campground[title]">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input class="form-control" type="text" id="location" name="campground[location]">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image URL</label>
+        <input class="form-control" type="text" id="image" name="campground[image]">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="price" class="form-label">Campground Price</label>
+        <div class="input-group">
+          <span class="input-group-text">$</span>
+          <input type="text" id="price" name="campground[price]" class="form-control" aria-label="Amount">
+        </div>
+      </div>
+      <div class="mb-1">
+        <button class="btn btn-primary">Submit</button>
+      </div>
+      <br>
+    </form>
+    <a href="/campgrounds">Cancel</a>
+  </div>
+</div>
