added bootstrap style to update form

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -31,6 +31,6 @@
       </div>
       <br>
     </form>
-    <a href="/campgrounds">Cancel</a>
+    <a class="btn" href="/campgrounds">Cancel</a>
   </div>
 </div>
