--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,14 +1,26 @@
 <% layout("/layouts/boilerplate") -%>
-<h1><%= foundCamp.title %></h1>
-<h2><%= foundCamp.location %></h2>
-<img src="<%= foundCamp.image %>" alt="">
-<p><%= foundCamp.description %></p>
-<div>
-  <a href="/campgrounds/<%= foundCamp._id %>/edit">Edit Campground</a>
+<div class="row mb-3">
+  <div class="col-6 offset-3">
+    <div class="card">
+      <img src="<%= foundCamp.image %>" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><%= foundCamp.title %></h5>
+        <p><%= foundCamp.description %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item text-muted"><%= foundCamp.location %></li>
+        <li class="list-group-item">$<%= foundCamp.price %>/night</li>
+      </ul>
+      <div class="card-body">
+        <a href="/campgrounds/<%= foundCamp._id %>/edit" class="card-link btn btn-info">Edit</a>
+        <form class="d-inline" action="/campgrounds/<%= foundCamp._id %>?_method=DELETE" method="post">
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+        <a href="/campgrounds">All Campgrounds</a>
+      </div>
+    </div>
+  </div>
 </div>
-<div>
-  <form action="/campgrounds/<%= foundCamp._id %>?_method=DELETE" method="post">
-    <button>Delete</button>
-  </form>
-</div>
-<a href="/campgrounds">All Campgrounds</a>
