--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,5 +22,17 @@
         <a href="/campgrounds">All Campgrounds</a>
       </div>
     </div>
+    <h2>Leave A Review</h2>
+    <form action="" method="post" class="mb-4">
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating (1-5)</label>
+        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="body">Review</label>
+        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+      </div>
+      <button class="btn btn-success" type="submit">Submit</button>
+    </form>
   </div>
 </div>
