--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") -%>
 <div class="row mb-3">
-  <div class="col-6 offset-3">
+  <div class="col-6">
     <div class="card">
       <img src="<%= foundCamp.image %>" class="card-img-top" alt="...">
       <div class="card-body">
@@ -22,6 +22,9 @@
         <a href="/campgrounds">All Campgrounds</a>
       </div>
     </div>
+
+  </div>
+  <div class="col-6 mb-3">
     <h2>Leave A Review</h2>
     <form action="/campgrounds/<%= foundCamp._id %>/reviews" method="post" class="mb-4 needs-validation" novalidate>
       <div class="mb-3">
@@ -34,5 +37,13 @@
       </div>
       <button class="btn btn-success" type="submit">Submit</button>
     </form>
+    <% for (let review of foundCamp.reviews) { %>
+    <div class="card mb-2">
+      <div class="card-body">
+        <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <p class="card-text">Review: <%= review.body %></p>
+      </div>
+    </div>
+    <% } %>
   </div>
 </div>
