--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -42,6 +42,9 @@
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
         <p class="card-text">Review: <%= review.body %></p>
+        <form action="/campgrounds/<%= foundCamp._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
+          <button>Delete</button>
+        </form>
       </div>
     </div>
     <% } %>
